@@ -31,7 +31,7 @@ USE_MCS_FLAGS :=
 NEW_TEST_SOURCES_common = xml-033 xml-034 xml-035 xml-036 test-329 2test-16 test-330 a-parameter5 test-331 test-332 \
 			  test-333 test-311 test-335 test-336 test-337 test-287 test-338 test-339 test-341 test-334 test-342 \
 			  test-344 test-345 test-346 test-347 test-348 test-349 test-350 test-351 test-352 test-353 test-354 test-355 \
-			  test-356 test-357 test-358 test-359 test-360 test-361 test-362 \
+			  test-356 test-357 test-358 test-359 test-360 test-361 test-362 test-363 \
 	mtest-7-dll mtest-7-exe \
 	mtest-8-dll mtest-8-exe
 
